--- a/Client/src/recources/log4j.properties
+++ b/Client/src/recources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=DEBUG, FileAppender
 
 # ??????????? ????????? ??? ?????? ? ????
 log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.FileAppender.File=logs.log
+log4j.appender.FileAppender.File=/Users/porunit/Desktop/lab/Prog/Lab6/student-18/Client/src/recources/logs.log
 log4j.appender.FileAppender.MaxFileSize=1MB
 log4j.appender.FileAppender.MaxBackupIndex=10
 log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
