--- a/Server/src/recources/log4j.properties
+++ b/Server/src/recources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.ConsoleAppender.layout.ConversionPattern=%m%n
 
 # ??????????? ????????? ??? ?????? ? ????
 log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.FileAppender.File=logs.log
+log4j.appender.FileAppender.File=/Users/porunit/Desktop/lab/Prog/Lab6/student-18/Server/src/recources/logs.log
 log4j.appender.FileAppender.MaxFileSize=1MB
 log4j.appender.FileAppender.MaxBackupIndex=10
 log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
